--- a/backend/package.json
+++ b/backend/package.json
@@ -20,6 +20,7 @@
     "mongoose": "^8.9.5",
     "morgan": "^1.10.0",
     "node-cron": "^3.0.3",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "redis": "^4.7.0"
   }
 }
