--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
 base = "portfolio"
-command = "npm install && npm run build"
-publish = "build"
+command = "npm run build"
+publish = "dist"
 
+[context]
 [context.production]
 command = "npm install && npm run build"
 
